2011-05-16  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Tools.pro misses include(common.pri)
        https://bugs.webkit.org/show_bug.cgi?id=60883

        It includes features.pri, which depends on common.pri (the build is
        not broken today with the default options, but this is the right
        thing to do).

        * Tools.pro:

2011-05-09  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] fix fast/dom/Geolocation/window-close-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60458

        Update all pages with Mock position/error/permission.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setGeolocationPermission):
        (LayoutTestController::setMockGeolocationError):
        (LayoutTestController::setMockGeolocationPosition):

2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add new qt-4.8 platform for layout testing
        https://bugs.webkit.org/show_bug.cgi?id=60544

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitdirs.pm:

2011-05-06  Gabor Rapcsanyi  <rgabor@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Use qt-arm platform instead of qt-linux on ARM platform.

        * Scripts/old-run-webkit-tests:

2011-05-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add more missing imports from scm refactor
        https://bugs.webkit.org/show_bug.cgi?id=60239

        * Scripts/webkitpy/common/checkout/scm/git.py:
        * Scripts/webkitpy/common/checkout/scm/svn.py:

2011-05-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        sheriff-bot is having more exception trouble
        https://bugs.webkit.org/show_bug.cgi?id=60233

        A webpage-forced build was causing SB to throw an exception.